force-app/main/default/objects/ArticleQuality_index__c/ArticleQuality_index__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Content Standard Checklist Definition</label>
</CustomObject>