force-app/main/default/objects/ArticleQuality_index__c/fields/Art_Meets_Content_Standard__c.field-meta.xml
<CustomField>
    <fullName>Art_Meets_Content_Standard__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Article Meets Content Standard(Obsolete)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>