force-app/main/default/objects/ArticleQuality_index__c/fields/Article_Unique__c.field-meta.xml
<CustomField>
    <fullName>Article_Unique__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Article Unique?</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>