force-app/main/default/objects/ArticleQuality_index__c/fields/Content_complete__c.field-meta.xml
<CustomField>
    <fullName>Content_complete__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Is the article Complete?</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>