force-app/main/default/objects/ArticleQuality_index__c/fields/Custom_Question_2__c.field-meta.xml
<CustomField>
    <fullName>Custom_Question_2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Custom Question 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>