force-app/main/default/objects/ArticleQuality_index__c/fields/Links_in_article_valid__c.field-meta.xml
<CustomField>
    <fullName>Links_in_article_valid__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Links in article valid</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>