force-app/main/default/objects/ArticleQuality_index__c/fields/Possible_Points__c.field-meta.xml
<CustomField>
    <fullName>Possible_Points__c</fullName>
    <defaultValue>7</defaultValue>
    <label>Possible points</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>