force-app/main/default/objects/ArticleQuality_index__c/fields/Prevent_AQI_Edit_on_Draft_Article__c.field-meta.xml
<CustomField>
    <fullName>Prevent_AQI_Edit_on_Draft_Article__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent AQI Edit on Draft Article</label>
    <type>Checkbox</type>
</CustomField>