force-app/main/default/objects/ArticleQuality_index__c/fields/Selected_Languages__c.field-meta.xml
<CustomField>
    <fullName>Selected_Languages__c</fullName>
    <defaultValue>&quot;en_US&quot;</defaultValue>
    <description>Comma separated list of Knowledge articles languages for the search page</description>
    <label>Selected languages</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>