force-app/main/default/objects/ArticleQuality_index__c/fields/Title_Accurate__c.field-meta.xml
<CustomField>
    <fullName>Title_Accurate__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Does the Title Relate to Article?</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>