force-app/main/default/objects/ArticleQuality_index__c/fields/Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AQI Score trigger enabled</label>
    <type>Checkbox</type>
</CustomField>